--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,24 +1,29 @@
-﻿@model HotDesk.Models.LoginModel
+﻿@model HotDesk.ViewModels.LoginViewModel
+@{
+    ViewData["Title"] = "Login";
+}
 
-<h2>Вход на сайт</h2>
-
-<a asp-action="Register" asp-controller="Account">Регистрация</a>
-
-<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
-    <div>
-        <div class="form-group">
-            <label asp-for="Email">Введите Email</label>
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email" />
+<body class="login-page">
+    <h1>Вход на сайт HotDesk</h1>
+    <a asp-action="Register" asp-controller="Account">Регистрация</a>
+    <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+        <div class="validation" asp-validation-summary="ModelOnly"></div>
+        <div>
+            <div class="form-group">
+                <label asp-for="Email">Введите Логин/Email</label>
+                <input type="text" asp-for="Email" />
+                <span asp-validation-for="Email" />
+            </div>
+            <br>
+            <div class="form-group">
+                <label asp-for="Password">Введите пароль</label>
+                <input asp-for="Password" />
+                <span asp-validation-for="Password" />
+            </div>
+            <br>
+            <div class="form-group">
+                <input type="submit" value="Войти" class="btn" />
+            </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Password">Введите пароль</label>
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Войти" class="btn" />
-        </div>
-    </div>
-</form>
+    </form>
+</body>
