Fixed ObjectNullExeption error

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -25,7 +25,7 @@
             </div>
             <br>
             <div>
-                <input type="submit" value="Регистрация" />
+                <input type="submit" value="Регистрация" class="btn"/>
             </div>
         </div>
     </form>
