--- a/Views/Admin/Devices.cshtml
+++ b/Views/Admin/Devices.cshtml
@@ -47,5 +47,5 @@
             </table>
         </form>
     </main>
-    <button class="open-button" onclick="openForm('addDeviceForm')">Добавить устройство</button>
+    <button class="btn" onclick="openForm('addDeviceForm')">Добавить устройство</button>
 </body>
