--- a/Views/Admin/Workplaces.cshtml
+++ b/Views/Admin/Workplaces.cshtml
@@ -58,5 +58,5 @@
             </table>
         </form>
     </main>
-    <button class="open-button" onclick="openForm('addWorkplaceForm')">Добавить рабочее место</button>
+    <button class="btn" onclick="openForm('addWorkplaceForm')">Добавить рабочее место</button>
 </body>
