--- a/Views/Home/MakeReservation.cshtml
+++ b/Views/Home/MakeReservation.cshtml
@@ -25,7 +25,7 @@
                     <input type="checkbox" name="deviceIds" value="@device.Id" />
                 </div>
             }
-            <button type="submit">Подтвердить</button>
+            <button class="btn" type="submit">Подтвердить</button>
         </form>
     </div>
 </body>
