--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HotDesk</title>
     <link href="~/css/StyleSheet.css" rel="stylesheet" />
+    <link rel="icon" type="image/ico" href="/img/OfficeEmployee.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <script src="/js/site.js"></script>
 </head>
