--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -22,7 +22,7 @@
             </div>
             <br>
             <div class="form-group">
-                <input type="submit" value="Войти" class="btn" />
+                <button type="submit" class="btn btn_log btn_next"><span>Войти</span></button>
             </div>
         </div>
     </form>
