--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -49,7 +49,7 @@
     margin: 0;
     overflow: hidden;
     background-color: #333;
-    width: 100%;
+    width: 96.8%;
 }
 
     .navigation li {
@@ -101,7 +101,7 @@ th, td {
     border-color: rgba(80, 80, 80, 0.75);
 }
 
-.open-button {
+/*.open-button {
     background-color: royalblue;
     color: white;
     padding: 16px 20px;
@@ -109,9 +109,10 @@ th, td {
     cursor: pointer;
     opacity: 0.9;
     width: 200px;
-}
+}*/
 
 .popup-form {
+    border-radius: 10px;
     display: none;
     max-width: 300px;
     position: fixed;
@@ -191,6 +192,7 @@ th, td {
     }
 
 .devices-form-body {
+    border-radius: 10px;
     width: 30%;
     margin: auto;
     background: rgba(51, 51, 51, 0.9);
@@ -211,3 +213,76 @@ th, td {
     display: inline-block;
     margin: 5%;
 }
+
+.btn-info {
+    display: inline-block;
+    border-radius: 100px;
+    background-color: green;
+    border: 3px solid black;
+    color: black;
+    text-align: center;
+    font-size: 28px;
+    padding: 15px 20px;
+    cursor: pointer;
+    margin: 5px;
+    font-family: inherit;
+}
+
+.btn-danger {
+    display: inline-block;
+    border-radius: 100px;
+    background-color: red;
+    border: 3px solid black;
+    color: black;
+    text-align: center;
+    font-size: 28px;
+    padding: 15px 20px;
+    cursor: pointer;
+    margin: 5px;
+    font-family: inherit;
+}
+
+.btn {
+    display: inline-block;
+    border-radius: 100px;
+    background-color: ghostwhite;
+    border: 3px solid black;
+    color: black;
+    text-align: center;
+    font-size: 28px;
+    padding: 15px 20px;
+    cursor: pointer;
+    margin: 5px;
+    font-family: inherit;
+}
+
+.btn_log {
+    position: absolute;
+/*    bottom: 0;*/
+    transition: all 0.5s;
+}
+
+    .btn span {
+        cursor: pointer;
+        display: inline-block;
+        position: relative;
+        transition: 0.5s;
+    }
+
+    .btn_next span:after {
+        content: '>>';
+        position: absolute;
+        opacity: 0;
+        top: 1px;
+        right: -55px;
+        transition: 0.5s;
+    }
+
+    .btn_next:hover span {
+        padding-right: 45px;
+    }
+
+    .btn_next:hover > span:after {
+        opacity: 1;
+        right: 0;
+    }
